@@ -15,6 +15,8 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with DOLFIN. If not, see <http://www.gnu.org/licenses/>.
 #
+# Modified by Anders Logg 2011
+#
 # First added:  2006
 # Last changed: 2010-09-01
 #
@@ -37,9 +39,9 @@ dc, dmu = split(du)
 c,  mu  = split(u)
 c0, mu0 = split(u0)
 
-lmbda    = Constant(triangle) # surface energy parameter
-dt       = Constant(triangle) # time step
-theta    = Constant(triangle) # time stepping parameter
+lmbda = Constant(triangle) # surface energy parameter
+dt    = Constant(triangle) # time step
+theta = Constant(triangle) # time stepping parameter
 
 # mu_(n+theta)
 mu_mid = (1-theta)*mu0 + theta*mu
@@ -49,8 +51,8 @@ c    = variable(c)
 f    = 100*c**2*(1-c)**2
 dfdc = diff(f, c)
 
-L0 = c*q*dx  - c0*q*dx   + dt*dot(grad(mu_mid), grad(q))*dx
-L1 = mu*v*dx - dfdc*v*dx - lmbda*dot(grad(c), grad(v))*dx
-L = L0 + L1
+F0 = c*q*dx  - c0*q*dx   + dt*dot(grad(mu_mid), grad(q))*dx
+F1 = mu*v*dx - dfdc*v*dx - lmbda*dot(grad(c), grad(v))*dx
+F  = F0 + F1
 
-a = derivative(L, u, du)
+J = derivative(F, u, du)
