@@ -86,12 +86,12 @@ int main()
   Source f;
   Function u(V);
 
-  // Create (linear) form defining (nonlinear) variational problem
+  // Create residual form defining (nonlinear) variational problem
   NonlinearPoisson::LinearForm F(V);
   F.u = u; F.f = f;
 
-  // Create jacobian J = F' (for use in nonlinear solver).
-  NonlinearPoisson::BilinearForm J(V, V);
+  // Create Jacobian form J = F' (for use in nonlinear solver).
+  NonlinearPoisson::JacobianForm J(V, V);
   J.u = u;
 
   // Solve nonlinear variational problem
